[project]
name = "mio"
version = "0.1.0"
description = "Drawing text in Python could be a bit simpler."
authors = [
    {name = "machinacanis", email = "hf4minecraft@163.com"},
]
dependencies = ["opencv-python>=4.11.0.86", "numpy>=2.2.3"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
